[package]
name = "backy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dependências de configuração
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "4.0"
# Datas e timestamps
chrono = "0.4"
